exports[`actions > analysis clearIsochroneResults should work 1`] = `
Object {
  "type": "clear isochrone results",
}
`;

exports[`actions > analysis setIsochroneCutoff should work 1`] = `
Object {
  "type": "set isochrone cutoff",
}
`;

exports[`actions > analysis setIsochroneFetchStatus should work 1`] = `
Object {
  "type": "set isochrone fetch status",
}
`;

exports[`actions > analysis setIsochroneLatLng should work 1`] = `
Object {
  "payload": Object {
    "lat": 12,
    "lng": 34,
  },
  "type": "set isochrone latlng",
}
`;

exports[`actions > analysis setIsochroneResults should work 1`] = `
Object {
  "type": "set isochrone results",
}
`;
